--- a/jenkins.org
+++ b/jenkins.org
@@ -340,6 +340,7 @@ cd /var/lib/jenkins/.ssh
 
 #+END_SRC
 
+
 ** s3 bucket get latest and unpack it jenkinsfile
 #+BEGIN_SRC 
 def getLatests3Release(String s3_bucket_name, String aws_s3_bucket_region, String project_id, String timestamp){
@@ -401,3 +402,59 @@ node {
   }
 }
 #+END_SRC
+
+** s3 upload list of files to s3 repo
+#+BEGIN_SRC 
+            script{
+                withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', 
+                accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
+                credentialsId: "${repo_bucket_credentials_id}", 
+                secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]){
+                    for(distFileName in ["ansible/hosts","terraform/terraform.tfstate"]) {
+                            awsIdentity() //show us what aws identity is being used
+                            def srcLocation = "${APP_BASE_DIR}"+"/"+"${distFileName}";
+                            def distLocation = 'terraform/' + "${env.TIMESTAMP}"+"/"+ distFileName;
+                            echo "Uploading ${srcLocation} to ${distLocation}"
+                            withAWS(region: "${env.aws_s3_bucket_region}"){
+                            s3Upload(file: srcLocation, bucket: "${env.aws_s3_bucket_name}", path: distLocation)
+                            }
+                        }
+                }
+            }
+#+END_SRC
+
+** Taking parameters and setting timestamp
+#+BEGIN_SRC 
+parameters {
+    password(name:'AWS_KEY', defaultValue: '', description:'Enter AWS_KEY')
+    choice(name: 'DEPLOY_ENV', choices: ['dev','sit','uat','prod'], description: 'Select the deploy environment')
+    choice(name: 'ACTION_TYPE', choices: ['deploy','create','destroy'], description: 'Create or destroy')
+    choice(name: 'INSTANCE_TYPE', choices: ['m3.large','t2.micro','m3.medium'], description: 'Type of instance')
+    string(name: 'SPOT_PRICE', defaultValue: '0.03', description: 'Spot price')
+    string(name: 'PLAYBOOK_TAGS', defaultValue: 'all', description: 'playbook tags to run')
+}
+
+stages{
+    stage('Init'){
+        steps{
+            checkout scm 
+        script{
+        env.DEPLOY_ENV = "$params.DEPLOY_ENV"
+        env.ACTION_TYPE = "$params.ACTION_TYPE"
+        env.INSTANCE_TYPE = "$params.INSTANCE_TYPE"
+        env.SPOT_PRICE = "$params.SPOT_PRICE"
+        env.PLAYBOOK_TAGS = "$params.PLAYBOOK_TAGS"
+        env.APP_ID = getEnvVar("${env.DEPLOY_ENV}",'APP_ID')
+        env.repo_bucket_credentials_id = "s3repoadmin";
+        env.aws_s3_bucket_name = 'jvcdp-repo';
+        env.aws_s3_bucket_region = 'ap-southeast-1';
+        env.APP_BASE_DIR = pwd()
+        env.GIT_HASH = sh (script: "git rev-parse --short HEAD", returnStdout: true)
+        env.TIMESTAMP = sh (script: "date +'%Y%m%d%H%M%S%N' | sed 's/[0-9][0-9][0-9][0-9][0-9][0-9]\$//g'", returnStdout: true)
+        }
+        echo "do some init here";
+
+        }
+    }
+#+END_SRC
+ 
